--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@ body {
     overflow: hidden;
 }
 
-#auth {
+#app {
     backdrop-filter: blur(10px);
     background: rgba(255, 255, 255, 0.1);
     border-radius: 15px;
@@ -18,16 +18,6 @@ body {
     max-width: 350px;
     width: 100%;
     text-align: center;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-}
-
-#login-form, #register-form {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
 }
 
 h1, p {
@@ -72,6 +62,16 @@ button:hover {
     font-size: 1.2em;
     margin-top: 20px;
     text-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+    display: none;
+}
+
+#output.achievement {
+    display: block;
+    color: #007bff; /* Azul agradable */
+    font-size: 1.5em;
+    font-weight: bold;
+    text-align: center;
+    margin: 0 auto;
 }
 
 #confettiCanvas {
