--- a/styles.css
+++ b/styles.css
@@ -20,7 +20,6 @@
 
 #login-form, #register-form {
     width: 300px;
-    padding: 20px;
     text-align: center;
     margin: 20px;
 }
@@ -31,6 +30,7 @@
 
 /* Pantalla de escaneo */
 #app {
+    display: none;
     padding: 20px;
     background-color: rgba(255, 255, 255, 0.1);
     backdrop-filter: blur(5px);
@@ -72,7 +72,7 @@ canvas {
     margin-top: 20px;
     font-size: 1.2em;
     font-weight: bold;
-    color: #5f72ff;
+    color: green;
 }
 
 #score {
