--- a/styles.css
+++ b/styles.css
@@ -20,6 +20,7 @@
 
 #login-form, #register-form {
     width: 300px;
+    padding: 20px;
     text-align: center;
     margin: 20px;
 }
@@ -30,7 +31,6 @@
 
 /* Pantalla de escaneo */
 #app {
-    display: none;
     padding: 20px;
     background-color: rgba(255, 255, 255, 0.1);
     backdrop-filter: blur(5px);
