--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@
 /* Estilo de la pantalla de autenticación */
 #auth {
     display: flex;
-    flex-direction: column;  /* Vertical layout */
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     height: 100vh;
