--- a/styles.css
+++ b/styles.css
@@ -87,3 +87,17 @@ canvas {
     font-weight: bold;
     color: #ff5e78;
 }
+#congrats-message {
+    display: none; /* Oculto por defecto */
+    background: rgba(255, 255, 255, 0.8);
+    padding: 20px;
+    border-radius: 10px;
+    text-align: center;
+    position: absolute; /* Para centrar el mensaje */
+    top: 50%; /* Ajusta según sea necesario */
+    left: 50%;
+    transform: translate(-50%, -50%); /* Centra el mensaje */
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    z-index: 10; /* Asegúrate de que esté por encima de otros elementos */
+}
+
